Fix mobile layout issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -240,7 +240,11 @@ body::before {
   }
 
   .webring {
-    width: 300px;
+    width: 350px;
+  }
+
+  .webring-contents-inner {
+    width: 72%;
   }
 
   .webring-title {
